# warden

./: .gitignore  ARCHITECTURE.md  CASE_STUDY.md  DEMO.md  EVALS.md  README.md  RUNBOOK.md  pyproject.toml
.claude-flow/data/: auto-memory-store.json  graph-state.json  intelligence-snapshot.json  ranked-context.json
.claude-flow/sessions/: session-1776362929706.json  session-1776362968224.json  session-1776363187737.json  session-1776363489926.json  session-1776363548505.json  session-1776363557216.json  session-1776363564974.json  session-1776363593409.json  session-1776363601348.json
.github/workflows/: ci.yml
evals/: __init__.py  run_eval.py  scenarios.json
examples/: fact_check_demo.py  real_triage.py
skills/bug-reproduction/: SKILL.md
skills/code-fix-proposal/: SKILL.md
skills/issue-triage/: SKILL.md
skills/pr-review/: SKILL.md
skills/release-notes/: SKILL.md
src/warden/: __init__.py  cli.py  config.py  mcp_server.py
src/warden/adapters/: __init__.py  github.py  patch.py  repo_fs.py  shell.py
src/warden/runtime/: client.py  (+13 more)
tests/: test_agent_loop.py  test_agentic_coding.py  test_agentic_investigation.py  test_agentic_review.py  test_agentic_triage.py  test_config.py  test_evals_harness.py  test_fact_checker.py  test_github_adapter.py  test_hallucination_audit.py  test_hooks.py  test_live_minimax.py  test_mcp_server.py  test_memory.py  test_patch.py  test_permissions.py  test_repo_fs.py  test_session_store.py  test_shell.py  test_subagents.py  test_tools.py  test_tracing.py  test_verifier.py  test_workflow_prompts.py
tests/support/: fakes.py
(+10 files in other folders)
