[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warden"
version = "0.1.0"
description = "Autonomous open-source maintainer agent platform on Claude Agent SDK + MiniMax M2.7."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jithendra Nara" }]
dependencies = [
    "claude-agent-sdk>=0.2.111",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
warden = "warden.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
warden = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
packages = ["warden"]
mypy_path = "src"
